--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,11 +14,11 @@ body {
     }
     .mobile {
         background-image: url('assets/images/mobile/image-hero.jpg');
-        background-position: center center;
+        // background-position: center center;
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         width: 100%;
-        height: 100vh;
+        height: 145vh;
     }
 }
 
@@ -28,11 +28,11 @@ body {
     }
     .desktop {
         background-image: url('assets/images/desktop/image-hero.jpg');
-        background-position: center center;
+        // background-position: center center;
         background-repeat: no-repeat;
-        background-size: contain;
+        // background-size: contain;
         width: 100%;
-        height: 100vh;
+        height: 650px;
     }
 }
 
